@@ -1,3 +1,8 @@
+2006-12-24  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* miscinf.cc: Removing unneeded debug message.
+	* ucbrowse: Lack of std::ios::binary in opening file caused wrong usecode
+	  symbol table. Changed to use U7open instead of constructor.
+
 2006-12-23    <jeff@mini.nerble.net>
 
 	* mapedit/shapeedit.cc: Added "Browse" buttons for usecode selection.
